tests/test-files/parse-toplevel.txt
================================================================================
1 Parse toplevel
================================================================================

(package coalton-unit-tests)

(monomorphize)
(declare x UFix)
(define x 2)

================================================================================
100 Malformed toplevel form
================================================================================

(package test-package)

((define) x 5)

--------------------------------------------------------------------------------

error: Malformed toplevel form
  --> test:3:1
   |
 3 |  ((define) x 5)
   |   ^^^^^^^^ unexpected list

================================================================================
101 Invalid toplevel form
================================================================================

(package test-package)

(unknown)

--------------------------------------------------------------------------------

error: Invalid toplevel form
  --> test:3:1
   |
 3 |  (unknown)
   |   ^^^^^^^ unknown toplevel form
